chenge text in foter

--- a/public/assets/scss/components/_section-title.scss
+++ b/public/assets/scss/components/_section-title.scss
@@ -18,7 +18,7 @@
 }
 
 .bd-section__title {
-    text-transform: capitalize;
+    // text-transform: capitalize;
     font-size: 55px;
     $self: &;
 
