--- a/public/assets/scss/layout/_faq.scss
+++ b/public/assets/scss/layout/_faq.scss
@@ -76,7 +76,7 @@
             line-height: 40px;
             color: var(--bd-common-black);
             padding: 30px 0 28px;
-            text-transform: capitalize;
+            // text-transform: capitalize;
             padding-inline-end: 30px;
 
             @media #{$lg} {
@@ -115,7 +115,7 @@
 
 .bd-faq-title {
     font-size: 36px;
-    text-transform: capitalize;
+    // text-transform: capitalize;
 
     @media #{$xs} {
         font-size: 30px;
