--- a/public/assets/scss/layout/_contact.scss
+++ b/public/assets/scss/layout/_contact.scss
@@ -122,7 +122,7 @@
         iframe {
             height: 100%;
             width: 100%;
-            filter: grayscale(1);
+            // filter: grayscale(1);
         }
     }
 }
